# --1

./: .env.example  DashboardPage.tsx  README.md  __init__.py  auth.py  base.py  chat.py  config.py  document.py  document_chunk.py  document_processing_job.py  documents.py  exceptions.py  inference.py  logger.py  main.py  metadata.json  middleware.py  note.py  package-lock.json  package.json  requirements.txt  search.py  session.py  settings.py  source_map.py  tailwind.config.ts  user.py  user_settings.py  vite.config.ts  web_search_history.py
backend/: .env.example  README.md  alembic.ini  generate_phase2.py  generate_phase3_4.py  generate_phase5.py  generate_phase6.py  pyproject.toml  requirements.txt  run.py  sql_app.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: dependencies.py  deps.py
backend/app/core/: config.py  constants.py  exceptions.py  logger.py  middleware.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  auth.py  chat.py  document.py  document_chunk.py  document_processing_job.py  message.py  note.py  recent.py  source_map.py  user.py  user_settings.py  web_result.py  web_search_history.py
backend/app/repositories/: chat_repository.py  document_repository.py  message_repository.py  note_repository.py  recent_repository.py  theme_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  (+9 more)
backend/scripts/: reindex_documents.py  reset_dev_db.py  seed_data.py
backend/tests/: test_chat.py  test_documents.py  test_notes.py  test_recents.py  test_websearch.py
(+114 files in other folders)
